fix: исправлено зависание при отрисовке сегментов

--- a/works/index.html
+++ b/works/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="./styles/anim-easy-slider-styles.css">
 </head>
 <body>
@@ -12,7 +11,14 @@
     <div class="container-inner">
         <div class="pages-row">
             <div class="section theme01 page001 showed">1</div>
-            <div class="section theme02 page002">2</div>
+            <div class="section theme02 page002">
+                <div class="kk"><p class="jj">Сайт пицерии "Пицелла"</p></div>
+                <!-- <div class="">Сайт пицерии "Пицелла"</div> -->
+                <div class="">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos itaque exercitationem 
+                    modi debitis ab ea maiores eum, ipsa, qui consectetur delectus cumque ullam enim.
+                </div>
+            </div>
             <div class="section theme02 page003">3</div>
             <div class="section theme02 page004">4</div>
             <div class="section theme03 page005">5</div>
