--- a/works/index.html
+++ b/works/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/anim-easy-slider-styles.css">
 </head>
 <body>
@@ -11,14 +12,27 @@
     <div class="container-inner">
         <div class="pages-row">
             <div class="section theme01 page001 showed">1</div>
-            <div class="section theme02 page002">
-                <div class="kk"><p class="jj">Сайт пицерии "Пицелла"</p></div>
-                <!-- <div class="">Сайт пицерии "Пицелла"</div> -->
-                <div class="">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos itaque exercitationem 
-                    modi debitis ab ea maiores eum, ipsa, qui consectetur delectus cumque ullam enim.
+            <article class="section theme02 page002">
+
+                <div class="left-part__markup">
+                    <h1>Вебдизайн</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Пиццерия "У дома"</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>React, Redux, CSS, JS</h3>
+                    <h2>Заказчик:</h2>
+                    <h3>Иннополис</h3>
                 </div>
-            </div>
+                <div class="right-part__markup">
+                    <div class="tech">
+                        <h2>Техническое задание:</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos itaque exercitationem 
+                            modi debitis ab ea maiores eum, ipsa, qui consectetur delectus cumque ullam enim.</p>
+                        <h2>Макет:</h2>
+                        <a href="">Предоставлен заказчиком</a>  
+                    </div>
+                </div>
+            </article>
             <div class="section theme02 page003">3</div>
             <div class="section theme02 page004">4</div>
             <div class="section theme03 page005">5</div>
