Первая страница посвященная сайту пиццерии

--- a/works/index.html
+++ b/works/index.html
@@ -20,16 +20,33 @@
                     <h3>Пиццерия "У дома"</h3>
                     <h2>Использованные технологии:</h2>    
                     <h3>React, Redux, CSS, JS</h3>
+                    <h2>Адаптив:</h2>
+                    <h3>Нет</h3>
                     <h2>Заказчик:</h2>
                     <h3>Иннополис</h3>
+
                 </div>
                 <div class="right-part__markup">
                     <div class="tech">
                         <h2>Техническое задание:</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos itaque exercitationem 
-                            modi debitis ab ea maiores eum, ipsa, qui consectetur delectus cumque ullam enim.</p>
-                        <h2>Макет:</h2>
-                        <a href="">Предоставлен заказчиком</a>  
+                        <hr>
+                        <ul>
+                            <li>Реализовать верстку трех экранов магазина по макету</li>
+                            <li>На первом экране сверстать главную страницу магазина. Список товаров на ней получаем из приложенного файла. 
+                                Реализовать скролл товаров на этой странице магазина и фиксированную шапку страницы</li>    
+                            <li>На втором экране верстаем корзину магазина. У страницы должны быть фиксированные шапка и подвал страницы</li>
+                            <li>Реализовать функционал добавления и удаления товара из корзины на главной странице магазина и на странице корзины</li>
+                            <li>При выборе карточек товара на двух отверстанных страницах мы должны попадать на третью - страницу конкретного товара. 
+                                С неё мы так же должны иметь возможность добавить товар в корзину</li>
+                            <li>Сделать страницу авторизации на которой мы должны авторизовать пользователя до того как он получит доступ к магазину, 
+                                а так же дать возможность пользователю зайти под другим логином. Функционал авторизации реализовать при помощи localStorage</li>
+                            <li>Реализовать весь остальной функционал отображенный на макете</li>
+                        </ul>
+                        <hr>
+                        <div>
+                            <span>Макет:</span>
+                            <a href="https://www.figma.com/file/8ZTqyXtHQvkGiJwWYs42Fi/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC?node-id=0%3A1">Предоставлен заказчиком</a>  
+                        </div>
                     </div>
                 </div>
             </article>
