feat: сделан интерфейс кнопок слайдера

--- a/works/index.html
+++ b/works/index.html
@@ -24,7 +24,10 @@
                     <h3>Нет</h3>
                     <h2>Заказчик:</h2>
                     <h3>Иннополис</h3>
-
+                    <button class="start-button">
+                        <a 
+                        href="https://hahahoj.github.io/pizzaville/">ЗАЙТИ</a>
+                    </button> 
                 </div>
                 <div class="right-part__markup">
                     <div class="tech">
@@ -32,20 +35,20 @@
                         <hr>
                         <ul>
                             <li>Реализовать верстку трех экранов магазина по макету</li>
-                            <li>На первом экране сверстать главную страницу магазина. Список товаров на ней получаем из приложенного файла. 
+                            <li>На первом экране сверстать главную страницу магазина. Список товаров взять из приложенного файла. 
                                 Реализовать скролл товаров на этой странице магазина и фиксированную шапку страницы</li>    
-                            <li>На втором экране верстаем корзину магазина. У страницы должны быть фиксированные шапка и подвал страницы</li>
+                            <li>На втором экране сверстать корзину магазина. У страницы должны быть фиксированные шапка и подвал страницы</li>
                             <li>Реализовать функционал добавления и удаления товара из корзины на главной странице магазина и на странице корзины</li>
                             <li>При выборе карточек товара на двух отверстанных страницах мы должны попадать на третью - страницу конкретного товара. 
                                 С неё мы так же должны иметь возможность добавить товар в корзину</li>
                             <li>Сделать страницу авторизации на которой мы должны авторизовать пользователя до того как он получит доступ к магазину, 
-                                а так же дать возможность пользователю зайти под другим логином. Функционал авторизации реализовать при помощи localStorage</li>
-                            <li>Реализовать весь остальной функционал отображенный на макете</li>
+                                а так же дать возможность пользователю зайти под другим логином. Функционал авторизации реалзовать при помощи localStorage</li>
+                            <li>Реализовать весь остальной функционал с макета</li>
                         </ul>
                         <hr>
                         <div>
                             <span>Макет:</span>
-                            <a href="https://www.figma.com/file/8ZTqyXtHQvkGiJwWYs42Fi/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC?node-id=0%3A1">Предоставлен заказчиком</a>  
+                            <a href="https://www.figma.com/file/8ZTqyXtHQvkGiJwWYs42Fi/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC?node-id=0%3A1">💾 Предоставлен заказчиком</a>  
                         </div>
                     </div>
                 </div>
@@ -57,10 +60,18 @@
         </div>
 
         <div class="buttons">
-            <input class="button__theme_prev button" type="button" value="Тема назад">
-            <input class="button__theme_next button" type="button" value="Тема вперед">
-            <input class="button__prev button" type="button" value="Назад">
-            <input class="button__next button" type="button" value="Вперед">
+            <div class="button-decor">
+                <input class="button__theme_prev button" type="button" value="⇐">
+            </div>
+            <div class="button-decor">
+                <input class="button__prev button" type="button" value="←">
+            </div>
+            <div class="button-decor">
+                <input class="button__next button" type="button" value="→">
+            </div>
+            <div class="button-decor">
+                <input class="button__theme_next button" type="button" value="⇒">
+            </div>
         </div>
     </div>
 
