fix: css почищен

--- a/works/index.html
+++ b/works/index.html
@@ -40,7 +40,7 @@
                             <li>При выборе карточек товара на двух отверстанных страницах мы должны попадать на третью - страницу конкретного товара. 
                                 С неё мы так же должны иметь возможность добавить товар в корзину</li>
                             <li>Сделать страницу авторизации на которой мы должны авторизовать пользователя до того как он получит доступ к магазину, 
-                                а так же дать возможность пользователю зайти<br>под другим логином. Функционал авторизации реализовать<br>при помощи localStorage</li>
+                                а так же дать возможность пользователю зайти под другим логином. Функционал авторизации реализован при помощи localStorage</li>
                             <li>Реализовать весь остальной функционал с макета</li>
                         </ul>
                         <hr>
