feat: Добавлен раздел Галлерея

--- a/works/index.html
+++ b/works/index.html
@@ -11,9 +11,26 @@
 
     <div class="container-inner">
         <div class="pages-row">
-            <div class="section theme01 page001 showed">1</div>
+            <article class="section theme01 page001 showed">
+                <div class="title-part__markup">
+                    <div class="poster-wanted"></div>
+                </div>
+                <div class="title-part__markup">
+                    <h1>Галлерея</h1>
+                    <div class="intro-text">
+                        <p>
+                            Приветствую Вас в своей галлерее, уважаемый посетитель. </p><br />
+                        <p> Здесь вы можете посмотреть на некоторые из моих работ 
+                            выполненных за последнее время.</p><br />
+                        <p> Просто выбирайте интересующую вас тему нажатием ⇐ и ⇒, 
+                            а также перемещайтесь между слайдами нажатием ← и → </p><br />
+                        <p> Приятного просмотра и использования моих скромных наработок...
+                        </p>
+                    </div>
+                </div>
+            </article>
             <article class="section theme02 page002">
-                <div class="left-part__markup">
+                <div class="title-part__markup">
                     <h1>Вебдизайн</h1>
                     <h2>Название проекта:</h2>
                     <h3>Пиццерия "У дома"</h3>
