feat: Третья страница добавлена

--- a/works/index.html
+++ b/works/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link type="image/png" sizes="120x120" rel="icon" href="./favicon.png">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/anim-easy-slider-styles.css">
 </head>
@@ -13,11 +14,11 @@
         <div class="pages-row">
             <article class="section theme01 page001 showed">
                 <div class="title-part__markup">
-                    <div class="poster-wanted"></div>
+                    <div class="background-wanted"></div>
                 </div>
                 <div class="title-part__markup">
                     <h1>Галлерея</h1>
-                    <div class="intro-text">
+                    <div class="description-wanted">
                         <p>
                             Приветствую Вас в своей галлерее, уважаемый посетитель. </p><br />
                         <p> Здесь вы можете посмотреть на некоторые из моих работ 
@@ -44,8 +45,8 @@
                         <input class="start-button" type="button" value="ЗАЙТИ">
                     </div>
                 </div>
-                <div class="right-part__markup">
-                    <div class="tech">
+                <div class="description-part__markup background-pizza">
+                    <div class="description-pizza">
                         <h2>Техническое задание:</h2>
                         <hr>
                         <ul>
@@ -63,12 +64,47 @@
                         <hr>
                         <div>
                             <span>Макет:</span>
-                            <a href="https://www.figma.com/file/8ZTqyXtHQvkGiJwWYs42Fi/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC?node-id=0%3A1">💾 Предоставлен заказчиком</a>  
+                            <a href="https://www.figma.com/file/8ZTqyXtHQvkGiJwWYs42Fi/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC?node-id=0%3A1" target="_blank">💾 Предоставлен заказчиком</a>  
                         </div>
                     </div>
                 </div>
             </article>
-            <div class="section theme02 page003">3</div>
+            <article class="section theme02 page003">
+                <div class="description-part__markup background-house">
+                    <div class="description-house">
+                        <h2>Техническое задание:</h2>
+                        <hr>
+                        <ul>
+                            <li>Реализовать frontend-часть верстки по предоставленному макету</li>
+                            <li>Реализацию функционала формы обратной связи, функционала кнопок и ссылок оставить для разработчика backend-а</li>    
+                            <li>Блок "ЧаВО" реализовать с использованием меню "Аккордеон"</li>
+                            <li>Сделать адаптив для просмотра сайта с мобильных устройств размером экрана от 320px</li>
+                            <li>На мобильной версии преобразовать меню шапки в выпадающее меню типа "Бутерброд"</li>
+                            <li>В мобильной версии отображение формы заявки отключить</li>
+                            <li>Шапку и подвал страницы не фиксировать</li>
+                        </ul>
+                        <hr>
+                        <div>
+                            <span>Макет:</span>
+                            <a href="https://www.figma.com/file/I3phvPokIBKRd6Sl6sjz8z/Untitled?node-id=1%3A2" target="_blank">💾 Предоставлен заказчиком</a>  
+                        </div>
+                    </div>
+                </div>
+                <div class="title-part__markup">
+                    <h1>Вебдизайн</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Лендинг "Окна Хаус"</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>HTML, CSS</h3>
+                    <h2>Адаптив:</h2>
+                    <h3>Да</h3>
+                    <h2>Заказчик:</h2>
+                    <h3>Иннополис</h3>
+                    <div class="">
+                        <input class="start-button" type="button" value="ЗАЙТИ">
+                    </div>
+                </div>
+            </article>
             <div class="section theme02 page004">4</div>
             <div class="section theme03 page005">5</div>
             <div class="section theme03 page006">6</div>
