--- a/works/index.html
+++ b/works/index.html
@@ -42,7 +42,7 @@
                     <h2>Заказчик:</h2>
                     <h3>Иннополис</h3>
                     <div class="">
-                        <input class="start-button" type="button" value="ЗАЙТИ">
+                        <input class="pizza-start start-button" type="button" value="ЗАЙТИ">
                     </div>
                 </div>
                 <div class="description-part__markup background-pizza">
@@ -61,7 +61,7 @@
                                 а так же дать возможность пользователю зайти под другим логином. Функционал авторизации реализован при помощи localStorage</li>
                             <li>Реализовать весь остальной функционал с макета</li>
                         </ul>
-                        <hr>
+                        <hr class="hr-limiter">
                         <div>
                             <span>Макет:</span>
                             <a href="https://www.figma.com/file/8ZTqyXtHQvkGiJwWYs42Fi/%D0%94%D0%B8%D0%BF%D0%BB%D0%BE%D0%BC?node-id=0%3A1" target="_blank">💾 Предоставлен заказчиком</a>  
@@ -83,7 +83,7 @@
                             <li>В мобильной версии отображение формы заявки отключить</li>
                             <li>Шапку и подвал страницы не фиксировать</li>
                         </ul>
-                        <hr>
+                        <hr class="hr-limiter">
                         <div>
                             <span>Макет:</span>
                             <a href="https://www.figma.com/file/I3phvPokIBKRd6Sl6sjz8z/Untitled?node-id=1%3A2" target="_blank">💾 Предоставлен заказчиком</a>  
@@ -101,7 +101,7 @@
                     <h2>Заказчик:</h2>
                     <h3>Иннополис</h3>
                     <div class="">
-                        <input class="start-button" type="button" value="ЗАЙТИ">
+                        <input class="house-start start-button" type="button" value="ЗАЙТИ">
                     </div>
                 </div>
             </article>
