feat: Добавлен четвертый слайд

--- a/works/index.html
+++ b/works/index.html
@@ -19,14 +19,10 @@
                 <div class="title-part__markup">
                     <h1>Галлерея</h1>
                     <div class="description-wanted">
-                        <p>
-                            Приветствую Вас в своей галлерее, уважаемый посетитель. </p><br />
-                        <p> Здесь вы можете посмотреть на некоторые из моих работ 
-                            выполненных за последнее время.</p><br />
-                        <p> Просто выбирайте интересующую вас тему нажатием ⇐ и ⇒, 
-                            а также перемещайтесь между слайдами нажатием ← и → </p><br />
-                        <p> Приятного просмотра и использования моих скромных наработок...
-                        </p>
+                        <p> Приветствую Вас в своей галлерее, уважаемый посетитель. </p><br>
+                        <p> Здесь вы можете посмотреть на некоторые из моих работ выполненных за последнее время.</p><br>
+                        <p> Просто выбирайте интересующую вас тему нажатием ⇐ и ⇒, а также перемещайтесь между слайдами нажатием ← и → </p><br>
+                        <p> Приятного просмотра и использования моих скромных наработок...</p>
                     </div>
                 </div>
             </article>
@@ -105,7 +101,40 @@
                     </div>
                 </div>
             </article>
-            <div class="section theme02 page004">4</div>
+            <article class="section theme02 page004">
+                <div class="title-part__markup">
+                    <h1>Вебдизайн</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Форма авторизации</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>JS, HTML, CSS</h3>
+                    <h2>Адаптив:</h2>
+                    <h3>Не нужен</h3>
+                    <h2>Заказчик:</h2>
+                    <h3>Иннополис</h3>
+                    <div class="">
+                        <input class="input-start start-button" type="button" value="ЗАЙТИ">
+                    </div>
+                </div>
+                <div class="description-part__markup background-input">
+                    <div class="description-input">
+                        <h2>Техническое задание:</h2>
+                        <hr>
+                        <ul>
+                            <li>Реализовать форму входа и регистрации пользователя по предоставленному макету</li>
+                            <li>Форма должна проверять введенные данные на корректность, если данные не корректны, то выдать соответствующее ошибке состояние, показанное в макете</li>    
+                            <li>Учетные данные хранить в localeStorage</li>
+                            <li>Список обязательных проверок введенных данных: проверка на обязательное включение чекбокса, проверка на корректность электронного адреса, проверка на длину пароля, проверка на пустые поля, проверка на отсутствие пользователя с регистрируемым емайл в базе localStorage</li>
+                            <li>Если валидация пройдена - зайти на сайт site.html</li>
+                        </ul>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>Макет:</span>
+                            <a href="https://www.figma.com/file/0HR7B7N3uK1s9QcBoPg7NH/Form-Style%2F-Media-Queries?node-id=0%3A1 " target="_blank">💾 Предоставлен заказчиком</a>  
+                        </div>
+                    </div>
+                </div>
+            </article>
             <div class="section theme03 page005">5</div>
             <div class="section theme03 page006">6</div>
         </div>
