feat: Добавлены прототипы всех веб-слайдов

--- a/works/index.html
+++ b/works/index.html
@@ -135,8 +135,80 @@
                     </div>
                 </div>
             </article>
-            <div class="section theme03 page005">5</div>
-            <div class="section theme03 page006">6</div>
+            <article class="section theme02 page005">
+                <div class="description-part__markup background-bagames">
+                    <div class="description-house">
+                        <h2>Техническое задание:</h2>
+                        <hr>
+                        <ul>
+                            <li>Реализовать frontend-часть верстки по предоставленному макету</li>
+                            <li>Реализацию функционала формы обратной связи, функционала кнопок и ссылок оставить для разработчика backend-а</li>    
+                            <li>Блок "ЧаВО" реализовать с использованием меню "Аккордеон"</li>
+                            <li>Сделать адаптив для просмотра сайта с мобильных устройств размером экрана от 320px</li>
+                            <li>На мобильной версии преобразовать меню шапки в выпадающее меню типа "Бутерброд"</li>
+                            <li>В мобильной версии отображение формы заявки отключить</li>
+                            <li>Шапку и подвал страницы не фиксировать</li>
+                        </ul>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>Макет:</span>
+                            <a href="https://www.figma.com/file/I3phvPokIBKRd6Sl6sjz8z/Untitled?node-id=1%3A2" target="_blank">💾 Предоставлен заказчиком</a>  
+                        </div>
+                    </div>
+                </div>
+                <div class="title-part__markup">
+                    <h1>Вебдизайн</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Лендинг "Это я!"</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>HTML, CSS, JS</h3>
+                    <h2>Адаптив:</h2>
+                    <h3>Да</h3>
+                    <h2>Заказчик:</h2>
+                    <h3>Для себя</h3>
+                    <div class="">
+                        <input class="house-start start-button" type="button" value="ЗАЙТИ">
+                    </div>
+                </div>
+            </article>
+            <article class="section theme02 page006">
+                <div class="title-part__markup">
+                    <h1>Вебдизайн</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Форма авторизации</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>JS, HTML, CSS</h3>
+                    <h2>Адаптив:</h2>
+                    <h3>Не нужен</h3>
+                    <h2>Заказчик:</h2>
+                    <h3>Иннополис</h3>
+                    <div class="">
+                        <input class="input-start start-button" type="button" value="ЗАЙТИ">
+                    </div>
+                </div>
+                <div class="description-part__markup background-slider">
+                    <div class="description-input">
+                        <h2>Техническое задание:</h2>
+                        <hr>
+                        <ul>
+                            <li>Реализовать форму входа и регистрации пользователя по предоставленному макету</li>
+                            <li>Форма должна проверять введенные данные на корректность, если данные не корректны, то выдать соответствующее ошибке состояние, показанное в макете</li>    
+                            <li>Учетные данные хранить в localeStorage</li>
+                            <li>Список обязательных проверок введенных данных: проверка на обязательное включение чекбокса, проверка на корректность электронного адреса, проверка на длину пароля, проверка на пустые поля, проверка на отсутствие пользователя с регистрируемым емайл в базе localStorage</li>
+                            <li>Если валидация пройдена - зайти на сайт site.html</li>
+                        </ul>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>Макет:</span>
+                            <a href="https://www.figma.com/file/0HR7B7N3uK1s9QcBoPg7NH/Form-Style%2F-Media-Queries?node-id=0%3A1 " target="_blank">💾 Предоставлен заказчиком</a>  
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <div class="section theme03 page006">7</div>
+            <div class="section theme03 page006">8</div>
+            <div class="section theme03 page006">9</div>
+            <div class="section theme03 page006">10</div>
         </div>
 
         <div class="buttons">
