feat: отверстаны первые пять слайдов

--- a/works/index.html
+++ b/works/index.html
@@ -137,22 +137,23 @@
             </article>
             <article class="section theme02 page005">
                 <div class="description-part__markup background-bagames">
-                    <div class="description-house">
+                    <div class="description-bagames">
                         <h2>Техническое задание:</h2>
                         <hr>
                         <ul>
-                            <li>Реализовать frontend-часть верстки по предоставленному макету</li>
-                            <li>Реализацию функционала формы обратной связи, функционала кнопок и ссылок оставить для разработчика backend-а</li>    
-                            <li>Блок "ЧаВО" реализовать с использованием меню "Аккордеон"</li>
-                            <li>Сделать адаптив для просмотра сайта с мобильных устройств размером экрана от 320px</li>
-                            <li>На мобильной версии преобразовать меню шапки в выпадающее меню типа "Бутерброд"</li>
-                            <li>В мобильной версии отображение формы заявки отключить</li>
+                            <li>Сделать лендинг по макету</li>
+                            <li>Реализовать функциональную часть макета на языке js и посредством CSS, предполагаемые анимации описаны в макете</li>    
+                            <li>Форма обратной связи отсылает письмо на п.я. администратора ресурса</li>
+                            <li>Эффект "воды" сделать максимально не ресурсоемким</li>
+                            <li>Эффект "параллакса" должен быть не менее чем трехуровневым</li>
                             <li>Шапку и подвал страницы не фиксировать</li>
+                            <li>Сделать адаптивную версию сайта разрешением от 480p</li>
+                            <li>В мобильной версии для большей совместимости<br> использовать эффекты на js по минимуму</li>
                         </ul>
                         <hr class="hr-limiter">
                         <div>
                             <span>Макет:</span>
-                            <a href="https://www.figma.com/file/I3phvPokIBKRd6Sl6sjz8z/Untitled?node-id=1%3A2" target="_blank">💾 Предоставлен заказчиком</a>  
+                            <a href="https://www.figma.com/file/89oxkozvs3kHd8Qa3ePRZo/%D0%9F%D0%BE%D1%80%D1%82%D1%84%D0%BE%D0%BB%D0%B8%D0%BE" target="_blank">💾 Собственная разработка</a>  
                         </div>
                     </div>
                 </div>
@@ -167,7 +168,7 @@
                     <h2>Заказчик:</h2>
                     <h3>Для себя</h3>
                     <div class="">
-                        <input class="house-start start-button" type="button" value="ЗАЙТИ">
+                        <input class="bagames-start start-button" type="button" value="ЗАЙТИ">
                     </div>
                 </div>
             </article>
@@ -175,32 +176,32 @@
                 <div class="title-part__markup">
                     <h1>Вебдизайн</h1>
                     <h2>Название проекта:</h2>
-                    <h3>Форма авторизации</h3>
+                    <h3>Веб-слайдер</h3>
                     <h2>Использованные технологии:</h2>    
                     <h3>JS, HTML, CSS</h3>
                     <h2>Адаптив:</h2>
                     <h3>Не нужен</h3>
                     <h2>Заказчик:</h2>
-                    <h3>Иннополис</h3>
+                    <h3>Для себя</h3>
                     <div class="">
-                        <input class="input-start start-button" type="button" value="ЗАЙТИ">
+                        <input class="slider-start start-button2" type="button" value="ЗАЙТИ">
                     </div>
                 </div>
                 <div class="description-part__markup background-slider">
-                    <div class="description-input">
+                    <div class="description-slider">
                         <h2>Техническое задание:</h2>
                         <hr>
                         <ul>
-                            <li>Реализовать форму входа и регистрации пользователя по предоставленному макету</li>
-                            <li>Форма должна проверять введенные данные на корректность, если данные не корректны, то выдать соответствующее ошибке состояние, показанное в макете</li>    
-                            <li>Учетные данные хранить в localeStorage</li>
-                            <li>Список обязательных проверок введенных данных: проверка на обязательное включение чекбокса, проверка на корректность электронного адреса, проверка на длину пароля, проверка на пустые поля, проверка на отсутствие пользователя с регистрируемым емайл в базе localStorage</li>
-                            <li>Если валидация пройдена - зайти на сайт site.html</li>
+                            <li>Реализовать слайдер переключающий сверстанные article по предоставленному макету</li>
+                            <li>Реализовать все эффекты предусмотренные в макете</li>    
+                            <li>Предусмотреть переключение до 9-ти разных тем web-слайдов. Сами слайды могут присутствовать в неограниченном количестве</li>
+                            <li>Реализовать вставку видео и аудио-материалов в слайды и убедиться в последующей работоспособености слайдера</li>
+                            <li>Адаптив не требуется, ширина экрана от 1200px</li>
                         </ul>
                         <hr class="hr-limiter">
                         <div>
                             <span>Макет:</span>
-                            <a href="https://www.figma.com/file/0HR7B7N3uK1s9QcBoPg7NH/Form-Style%2F-Media-Queries?node-id=0%3A1 " target="_blank">💾 Предоставлен заказчиком</a>  
+                            <a href="https://www.figma.com/file/0HR7B7N3uK1s9QcBoPg7NH/Form-Style%2F-Media-Queries?node-id=0%3A1" download target="_blank">💾 Собственная разработка</a>  
                         </div>
                     </div>
                 </div>
