--- a/works/index.html
+++ b/works/index.html
@@ -201,7 +201,7 @@
                         <hr class="hr-limiter">
                         <div>
                             <span>Макет:</span>
-                            <a href="https://www.figma.com/file/0HR7B7N3uK1s9QcBoPg7NH/Form-Style%2F-Media-Queries?node-id=0%3A1" download target="_blank">💾 Собственная разработка</a>  
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/intro/tz.png" target="_blank">💾 Собственная разработка</a>  
                         </div>
                     </div>
                 </div>
