feat: добавлены 6,7 слайды

--- a/works/index.html
+++ b/works/index.html
@@ -206,8 +206,78 @@
                     </div>
                 </div>
             </article>
-            <div class="section theme03 page006">7</div>
-            <div class="section theme03 page006">8</div>
+            <article class="section theme03 page002">
+                <div class="description-part__markup background-dredd">
+                    <div class="description-dredd">
+                        <h2>You are Judge Dredd in House of Death:</h2>
+                        <hr>
+                        <p>Патрулируя улицы Мегасити-1 вы, как судья Дредд, вынуждены будете столкнуться
+                            не только с преступностью, но и со своими старыми врагами. Не сомневайтесь, вы окажитесь на самом 
+                            пороге Смерти...</p><br>
+                        <p>Перед вами небольшая графическая визуальная новелла - 
+                            адаптация книги-игры опубликованной в 1986 году в британском журнале 
+                            "2000AD Diceman".</p><br>
+                        <p>Изначально игра создавалась под web, но не размещалась в этом виде в интернете.
+                            Вместо этого она была перекомпилированна для запуска под Windows всех версий и 
+                            Android, затем выложена в свободный доступ. Версию игры под 32-битную Windows <br>
+                            можно скачать прямо на этой странице.</p>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>Последние версии игры:</span>
+                            <a href="https://cloud.mail.ru/public/34h9/2usxNA6CH" target="_blank">💾 лежат тут</a>  
+                        </div>
+                    </div>
+                </div>
+                <div class="title-part__markup">
+                    <h1>Геймдев</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Dredd: HoD</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>TyranoScript,JS,CSS</h3>
+                    <h2>Платформы:</h2>
+                    <h3>Windows, Android</h3>
+                    <h2>Под лейблом:</h2>
+                    <h3>Retrogomer</h3>
+                    <div class="">
+                        <input class="dredd-start start-button" type="button" value="СКАЧАТЬ">
+                    </div>
+                </div>
+            </article>
+            <article class="section theme03 page006">
+                <div class="title-part__markup">
+                    <h1>Геймдев</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Slaine:CoB</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>TyranoScript,JS,CSS</h3>
+                    <h2>Платформы:</h2>
+                    <h3>Windows, Android</h3>
+                    <h2>Под лейблом:</h2>
+                    <h3>Retrogomer</h3>
+                    <div class="">
+                        <input class="slaine-start start-button" type="button" value="СКАЧАТЬ">
+                    </div>
+                </div>
+                <div class="description-part__markup background-slaine">
+                    <div class="description-slaine">
+                        <h2>You are Slaine in Cauldron of Blood:</h2>
+                        <hr>
+                        <p>Лгут ли легенды? Вы на самом деле достойны быть королём? 
+                            Протестируйте свою мощь и навыки выживания в этом небольшом приключении - 
+                            походе за Кровавым Котлом, в который вас отправили правители Извечной Твердыни.</p><br>
+                        <p>Еще одна адаптация книги-игры, опубликованной в "2000AD Diceman", с фиксами журнальных ошибок и
+                            новым боевым модулем.</p><br>
+                        <p>В дальнейшем планируется полная переделка этой игры в игровой данжен-модуль для новой, "толстой" 
+                            игры, созданной по мотивам трех первых томов саги.</p><br>
+                        <p>32-битную версию игры вы можете скачать прямо на этой<br>странице.</p>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>Последние версии игры:</span>
+                            <a href="https://cloud.mail.ru/public/8dHe/223QV6doe" target="_blank">💾 лежат тут</a>  
+                        </div>
+                    </div>
+                </div>
+            </article>
             <div class="section theme03 page006">9</div>
             <div class="section theme03 page006">10</div>
         </div>
