feat: добавлена страница заголовка

--- a/works/index.html
+++ b/works/index.html
@@ -278,8 +278,52 @@
                     </div>
                 </div>
             </article>
-            <div class="section theme03 page006">9</div>
-            <div class="section theme03 page006">10</div>
+            <article class="section theme04 page006">
+                <div class="description-part__markup background-tools">
+                    <div class="description-tools">
+                        <h2>Набор инструментов для работы с графикой виз. новелл:</h2>
+                        <hr>
+                        <p>
+                            Пакет утилит предназначен для облегчения создания продуктов (в частности виртуальных новелл) 
+                            на ретро-платформах (таких как ZX-Spectrum или Gameboy). Включает Windows архиваторы, разархиваторы и
+                            просмотрщики файлов заархивированных в служебные для некоторых движков форматы.
+                        </p>  <br><hr>
+                        <div>
+                            <span>MassiveScrCompressor:</span>
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/MassiveScrCompressor 1.2b.ZIP" target="_blank">💾 лежит тут</a>
+                        </div>
+                        <p>Эта утилита организует одиночное и пакетное перекодирование .scr файлов (6912 байт) 
+                            в формат .crp (2/3 экрана с раздельно сжатыми архиватором zx7 полями пикселей и атрибутов).</p>
+                            <hr>
+                        <div>
+                            <span>UnCrp:</span>
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/UnCrp v.1.01.zip" target="_blank">💾 лежит тут</a>
+                        </div>
+                        <p>Утилита для предпросмотра .sca (упакованный одним блоком .scr) и .crp файлов под Windows. Можно повесить на дефолтовую реакцию Windows на указанные расширения.</p>
+                        <hr class="hr-limiter">
+                        <div>
+                            <span>unzx7:</span>
+                            <a href="https://hahahoj.github.io/smallsite/works/Pages/tools/unzx7 v.1.01.zip" target="_blank">💾 лежит тут</a>
+                        </div>
+                        <p>Утилита для разархивации под Windows сжатых zx7 небольших файлов</p>
+                    </div>
+                </div>
+                <div class="title-part__markup">
+                    <h1>Инструменты</h1>
+                    <h2>Название проекта:</h2>
+                    <h3>Работа с файлами</h3>
+                    <h2>Использованные технологии:</h2>    
+                    <h3>PureBasic, Assembler</h3>
+                    <h2>Платформы:</h2>
+                    <h3>Windows, Spectrum</h3>
+                    <h2>Под лейблом:</h2>
+                    <h3>Hahahoj</h3>
+                    <!-- <div class="">
+                        <input class="tools-start start-button" type="button" value="СКАЧАТЬ">
+                    </div> -->
+                </div>    
+            </article>
+            <div class="section theme04 page006">10</div>
         </div>
 
         <div class="buttons">
